# eaidashboard

./: .coveragerc  .flake8  .gitignore  Pipfile  README.md  behave.ini  build-frontend.ps1  build_frontend.sh  dockerfile  log_config.yaml  main.py  pyproject.toml  pytest.ini  run.py
.github/workflows/: coverage.yml  main.yml  push.yml
app/: api.py  app_exception.py  conf.py
app/database/: authentication.py  authorization.py  bugs.py  db_settings.py  postgre_updates.py  postgres.py  projects.py  settings.py  testcampaign.py  testrepository.py  tickets.py  users.py  versions.py
app/documentation/: 00-br_rights.md  00-how_to.md  00-monitoring.md  00-workflows.md  01-workflows.md  02-workflows.md  03-workflows.md  index.md  workflows.md
app/routers/: auth.py  front_dashboard.py  front_projects.py  monitoring.py  project_campaigns.py  project_repository.py  projects.py  settings.py  users.py  version.py
app/schema/: authentication.py  base_schema.py  bugs_schema.py  campaign_field_filtering.py  campaign_followup_schema.py  campaign_schema.py  error_code.py  mongo_enums.py  monitoring_schema.py  pg_schema.py  postgres_enums.py  project_enum.py  project_schema.py  py_objectid.py  redis_schema.py  repository_schema.py  rest_enum.py  status_enum.py  ticket_schema.py  users.py  versions_schema.py
app/sql/: create_db.sql
app/templates/: back_message.html  base.html  base_head.html  base_project.html  base_user.html  bug_board.html  bugs.html  campaign.html  campaign_board.html  dashboard.html  documentation.html  download_link.html  error_message.html  frame.html  index.html  login_modal.html  modal_error.html  navigation.html  project.html  repository_board.html  test_results.html  ticket_row.html  ticket_row_edit.html  ticket_view.html  versions.html
app/utils/: log_management.py  openapi_tags.py  pages.py  pgdb.py  project_alias.py  redis.py  report_generator.py
docker-build-frontend/: Dockerfile
documentation/: campaign_schema.puml  error_message.md  headers_summary.md  icons.md  mongo_structure.puml  moving_ticket_sequence.puml  one_project.puml  projects.puml  repository_schema.puml  routing.puml  sql_db.puml  ticket_schema.puml  update_ticket_scenarios.puml  user_management.puml
documentation/doc_diag/: bug_ticket_scenario_relation.puml  multiple_occurrence_campaign.puml  one_occurrence_campaign.puml  simple_bug_workflow.puml  simple_ticket_workflow.puml  simple_workflow.puml  version_default_state_diagram.puml
documentation/worklog/: Editable test cases.puml  automatic_import.puml  bug_issue_link.puml  delete_test_scenario.puml  monitoring.puml  objects_delete.puml
features/: environment.py
features/documentation/: glossary.md
features/projects/: Access_project.feature  add_version.feature
frontend/: DEPLOYMENT.md  TESTING.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  (+2 more)
helpers/: conversion_utils.py  mock_models.py
tests/: conftest.py  test_000_rest_settings.py  test_001_rest_users.py  test_002_rest_projects.py  test_003_rest_versions.py  test_004_rest_campaign.py  test_006_rest_repository.py  test_007_rest_campaign_scenario.py  test_008_rest_deliverables.py  test_009_monitoring.py  test_00_rest_settings.py  test_010_delete_scenarios.py  test_01_rest_projects.py  test_01_rest_users.py  test_02_rest_projects.py  test_02_rest_versions.py  test_03_rest_campaign.py  test_03_rest_versions.py  test_04_rest_bug.py  test_04_rest_campaign.py  test_05_rest_bug.py  test_05_rest_users.py  test_06_rest_repository.py  test_07_rest_campaign_scenario.py  test_08_rest_deliverables.py  test_100_rest_campaign_workflow.py  test_10_delete_scenarios.py  test_10_rest_campaign_workflow.py  test_200_ticket_scenario_campaign.py  test_api.py  test_rest_projects.py  test_rest_settings.py  test_rest_versions.py  test_transition.py
utilities/: bulk_settings.py
(+144 files in other folders)
